--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
                 <a href="#">Terms</a>
             </div>
             <div class="social-links">
-                <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://twitter.com/PurpleTacticos" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-twitter"></i>
+</a>
             </div>
         </div>
         <div class="copyright">
