--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <a href="#new-heat">New Heat</a>
                 <a href="search.html">Search</a>
                 <a href="#submit-take">Submit</a>
+                <a href="all-takes.html">All Takes</a>
                 <button id="darkModeToggle" aria-label="Toggle Dark Mode">
                     <i class="fas fa-moon"></i>
                 </button>
