--- a/legal.html
+++ b/legal.html
@@ -27,6 +27,7 @@
                 <a href="index.html#new-heat">New Heat</a>
                 <a href="search.html">Search</a>
                 <a href="index.html#submit-take">Submit</a>
+                <a href="all-takes.html">All Takes</a>
                 <button id="darkModeToggle" aria-label="Toggle Dark Mode">
                     <i class="fas fa-moon"></i>
                 </button>
