--- a/search.html
+++ b/search.html
@@ -28,6 +28,7 @@
                 <a href="index.html#new-heat">New Heat</a>
                 <a href="#" class="active">Search</a>
                 <a href="index.html#submit-take">Submit</a>
+                <a href="all-takes.html">All Takes</a>
                 <button id="darkModeToggle" aria-label="Toggle Dark Mode">
                     <i class="fas fa-moon"></i>
                 </button>
