--- a/all-takes.html
+++ b/all-takes.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <!-- Same navigation as index.html -->
+        <a href="all-takes.html" class="active">All Takes</a>
     </header>
 
     <main class="section-container">
