--- a/search.html
+++ b/search.html
@@ -26,7 +26,7 @@
                 <a href="index.html">Home</a>
                 <a href="index.html#old-articles">Classics</a>
                 <a href="index.html#new-heat">New Heat</a>
-                <a href="#" class="active">Search</a>
+                <a href="search.html" class="active">Search</a>
                 <a href="index.html#submit-take">Submit</a>
                 <a href="all-takes.html">All Takes</a>
                 <button id="darkModeToggle" aria-label="Toggle Dark Mode">
