--- a/all-takes.html
+++ b/all-takes.html
@@ -1,4 +1,3 @@
-<!-- all-takes.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,11 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Takes - Purple Tacticos</title>
     <link rel="stylesheet" href="styles/main.css">
-    <!-- Include same head content as index.html -->
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.5/purify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script>
+        const SUPABASE_URL = 'https://zlgdklqjaomnlfteairf.supabase.co';
+        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpsZ2RrbHFqYW9tbmxmdGVhaXJmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQwNjMxODQsImV4cCI6MjA1OTYzOTE4NH0.UlpTet57p8RZcmJ5ULf2TCFVG_rTubx7rLHRTHRFRn8';
+        const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
+    </script>
 </head>
 <body>
     <header>
-        <a href="all-takes.html" class="active">All Takes</a>
+        <nav class="nav-bar">
+            <div class="brand">
+                <img src="https://i.pinimg.com/736x/c7/92/2b/c7922bbec96f996d9eded7837d324ff2.jpg" alt="Logo" class="logo">
+                <h1>Purple Tacticos</h1>
+            </div>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="index.html#old-articles">Classics</a>
+                <a href="index.html#new-heat">New Heat</a>
+                <a href="search.html">Search</a>
+                <a href="index.html#submit-take">Submit</a>
+                <a href="all-takes.html" class="active">All Takes</a>
+                <button id="darkModeToggle" aria-label="Toggle Dark Mode">
+                    <i class="fas fa-moon"></i>
+                </button>
+            </div>
+        </nav>
     </header>
 
     <main class="section-container">
@@ -21,7 +44,7 @@
                 <option value="hottest">Hottest Takes</option>
                 <option value="controversial">Most Controversial</option>
             </select>
-            <input type="text" id="searchAll" placeholder="Search all takes...">
+            <input type="text" id="searchAll" placeholder="Search all takes..." oninput="performSearch()">
         </div>
         <div id="allTakes" class="article-grid"></div>
         <div id="allEmpty" class="empty-state">No takes found in the archives</div>
