--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
                 <h1>Purple Tacticos</h1>
             </div>
             <div class="nav-links">
-                <a href="#" class="active">Home</a>
-                <a href="#old-articles">Classics</a>
-                <a href="#new-heat">New Heat</a>
-                <a href="search.html">Search</a>
-                <a href="#submit-take">Submit</a>
-                <a href="all-takes.html">All Takes</a>
+               <!-- Find the nav-links div and REPLACE existing links with: -->
+<a href="index.html">Home</a>
+<a href="index.html#old-articles">Classics</a>
+<a href="index.html#new-heat">New Heat</a>
+<a href="search.html">Search</a>
+<a href="games.html" class="active">Games</a> <!-- Add this line -->
+<a href="all-takes.html">All Takes</a>
                 <button id="darkModeToggle" aria-label="Toggle Dark Mode">
                     <i class="fas fa-moon"></i>
                 </button>
